--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -19,9 +19,10 @@
 
     <body>
         <!--put your initial page content here-->
-        <div id="mycontent"></div>
-        <div id="map"></div>
-        <div id="credits"></div>
+        <div id = "mycontent"></div>
+        <div id = "map"></div>
+        <div id = "panel"></div>
+        <div id = "credits"></div>
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
 
