--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -28,6 +28,6 @@
 
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
-        <script type="text/javascript" src="js/adaptedTutorial.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
