--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -22,6 +22,7 @@
         <div id = "mycontent"></div>
         <div id = "map"></div>
         <div id = "panel"></div>
+        <div id = "panelOne"></div>
         <div id = "credits"></div>
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
