Activity 7 - Final push
Still needs to resolve the display of current year

--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -21,8 +21,9 @@
         <!--put your initial page content here-->
         <div id = "mycontent"></div>
         <div id = "map"></div>
-        <div id = "panel"></div>
-        <div id = "panelOne"></div>
+        <div id = "panel">
+            <div id = "current-year"></div>
+        </div>
         <div id = "credits"></div>
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
