--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -21,9 +21,7 @@
         <!--put your initial page content here-->
         <div id = "mycontent"></div>
         <div id = "map"></div>
-        <div id = "panel">
-            <div id = "current-year"></div>
-        </div>
+        <div id = "panel"></div>
         <div id = "credits"></div>
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
