--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-            <title> Demo Leaflet Map </title>
+            <title> US Oil Production Map </title>
+        
+        <link rel="icon" type="image/x-icon" href="assets\rig-icon.ico">
 
         <!--put your external stylesheet links here-->
         <link rel="stylesheet" href="lib/leaflet/leaflet.css">
