Content update - css, html. js
Map content is added, context is provided. Also, sequence controls are updated +4 years of forward change. Mobile design is improved. Changes are added to title, minor changes are corrected.

--- a/unit-2/index.html
+++ b/unit-2/index.html
@@ -21,7 +21,8 @@
 
     <body>
         <!--put your initial page content here-->
-        <div id = "mycontent"></div>
+        <div id = "title"></div>
+        <div id = "mapcontent"></div>
         <div id = "map"></div>
         <div id = "panel"></div>
         <div id = "credits"></div>
