--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -24,8 +24,8 @@
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
-
         <!--put your external script links here-->
+        <script type="text/javascript" src="lib/d3-7.8.2/package/dist/d3.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
