update div element for lollipop chart

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -18,12 +18,13 @@
 
     <body>
         <!--put your initial page content here-->
+        <div id="my_dataviz"></div>
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/d3/d3.min.js"></script>
         <script type="text/javascript" src="lib/topojson/topojson.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/lollipopchart.js"></script>
     </body>
 </html>
