Final D3 Title added

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <!--put your initial page content here-->
-        <div id="my_dataviz"></div>
+        <div id="maptitle"> Wisconsin's Demographics & Social Indicators: A Visual Exploration </div>
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
