--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -18,7 +18,40 @@
 
     <body>
         <!--put your initial page content here-->
-        <div id="maptitle"> Wisconsin's Demographics & Social Indicators: A Visual Exploration </div>
+        <div class = "mapTitle"> 
+            Demographics & Social Indicators of Wisconsin: A Visual Exploration 
+        </div>
+
+        <div class = "mapDesc">
+        <p>
+            <b>Attention User :</b> Start by selecting an attribute from the <b>dropdown</b> and visualize different demographic variables and social indicators. <b>Hover</b> over any county or dot plot line to retrieve information regarding visualized variable. Designed for <b>desktop only</b> and best viewed in PC. If the layout is disturbed, <b>hit refresh</b> and resume
+        </p>
+
+        <p>
+            Confused where to start or what to select? Try answering questions below.
+            <ol type = "1">
+                 <li> 
+                    Find which <b>county</b> has <b>most</b> percentage of <b> Native Americans</b>? 
+                </li>
+                 <li> 
+                    Find which <b>county</b> has <b>most</b> percentage of the population in <b> poverty (all persons)? </b> 
+                </li>
+                 <li> 
+                    Find which <b>county</b> has the <b>highest</b> <b>Gini index</b> of income inequality? 
+                </li>
+             </ol>
+
+            Did you find any interesting pattern? As per Wisconsin Public Radio, Wisconsin is considered one of the poorest states for racial disparities.<sup><a href = "https://www.wpr.org/wisconsin-considered-one-worst-states-racial-disparities">1</a></sup> The discrepancies span across education, income, and unemployment. Furthermore, the racial gap is established by the Gini index. <sup><a href = "https://www.census.gov/topics/income-poverty/income-inequality/about/metrics/gini-index.html">2</a></sup> Furthermore, parameters like Rented households and households without vehicles add better validation. Interestingly, the aforementioned factors resulted in Wisconsin's waning population growth.<sup><a href = "https://www.forward-analytics.net/research/slowing-down-wisconsins-waning-population-growth/">3</a></sup> Except for Milwaukee, there is sparse growth in urban counties <sup><a href = "https://www.dhs.wisconsin.gov/wish/urban-rural.htm">4</a></sup> like Dane, Brown, and Ozaukee. Therefore, there is no natural population growth in 29 rural counties of Wisconsin.
+        </p>
+
+        </div>
+
+        <div class = "credits">
+            <p> 
+                <b>Data Sources:</b> <a href = "https://foodsecurity.wisc.edu/downloaddata">Wisconsin Food Security Project</a>, <a href = "https://geodata.wisc.edu/catalog/604F7A0B-1715-43B8-835E-4032851481AD"> GeoData@Wisconsin</a> | <b> Credits:</b> <a href = "https://mapshaper.org/">MapShaper</a>, <a href = "https://cartobaldrica.github.io/portfolio/resume.html"> Gareth Baldrica-Franklin</a> | Check my portfolio - <a href = "https://sidrcs.github.io/maps/index.html">Sid Maps</a>
+            </p>
+            © Copyright Chinna Subbaraya Siddharth (Sid) Ramavajjala 2023 
+        </div>
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
