Wisc ico update

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-            <title>D3 Lab Sid</title>
+        <link rel="icon" type="image/x-icon" href="img/wisc.ico"> 
+        <title>Wisconsin Interactive Map</title>
 
         <!--put your external stylesheet links here-->
         <link rel="stylesheet" href="css/style.css">
