D3 Lab Minor HTML update

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -25,7 +25,7 @@
 
         <div class = "mapDesc">
         <p>
-            <b>Attention User :</b> Start by selecting an attribute from the <b>dropdown</b> and visualize different demographic variables and social indicators. <b>Hover</b> over any county or dot plot line to retrieve information regarding visualized variable. Designed for <b>desktop only</b> and best viewed in PC. If the layout is disturbed, <b>hit refresh</b> and resume
+            <b>Attention User :</b> Start by selecting an attribute from the <b>dropdown</b> and visualize different demographic variables and social indicators. <b>Hover</b> over any county or dot plot line to retrieve information regarding visualized variable. Designed for <b>desktop only</b> and best viewed in PC. If the layout is disturbed, <b>hit refresh</b> and resume.
         </p>
 
         <p>
