Final D3 Experimental implementation
1. Implemented two color schemes based on emotion connected with variables in makeColorScale() function.
2> Updated info label background color based on makeColorScale() function changed.
3, Used CSS style to create a homogenized hyperlinks (same green color)

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -32,7 +32,7 @@
            Need help with where to start or what to select? Try answering questions below.
             <ol type = "1">
                  <li> 
-                    Find which <b>county</b> has <b>most</b> percentage of <b> Native Americans</b>? 
+                    Find which <b>county</b> has <b>most</b> percentage of <b> Native Americans</b>?
                 </li>
                  <li> 
                     Find which <b>county</b> has <b>most</b> percentage of the population in <b> poverty (all persons)? </b> 
@@ -59,6 +59,6 @@
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/d3/d3.min.js"></script>
         <script type="text/javascript" src="lib/topojson/topojson.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/experiment.js"></script>
     </body>
 </html>
