Final D3 color scheme update

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -59,6 +59,6 @@
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/d3/d3.min.js"></script>
         <script type="text/javascript" src="lib/topojson/topojson.min.js"></script>
-        <script type="text/javascript" src="js/experiment.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
