--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -21,13 +21,10 @@
         <!--put your initial page content here-->
         <div class = "mapTitle"> 
             Demographics & Social Indicators of Wisconsin: A Visual Exploration 
+            <button class="reset-button" onClick="window.location.reload(true)">Reset</button>
         </div>
 
         <div class = "mapDesc">
-        <p>
-            <b>Attention User :</b> Select an attribute from the <b>dropdown</b> and visualize different demographic variables and social indicators. <b>Hover</b> over any county or dot plot line to retrieve information regarding visualized variable. Designed for <b>desktop only</b> and best viewed in PC. If the layout is disturbed, <b>hit refresh</b> and resume.
-        </p>
-
         <p>
            Need help with where to start or what to select? Try answering questions below.
             <ol type = "1">
@@ -41,10 +38,8 @@
                     Find which <b>county</b> has the <b>highest</b> <b>Gini index</b> of income inequality? 
                 </li>
              </ol>
-
             Did you find any interesting pattern? As per Wisconsin Public Radio, Wisconsin is considered one of the poorest states for racial disparities.<sup><a href = "https://www.wpr.org/wisconsin-considered-one-worst-states-racial-disparities">1</a></sup> The discrepancies span across education, income, and unemployment. Furthermore, the racial gap is established by the Gini index (1 - high inequality, 0 - high equality). <sup><a href = "https://www.census.gov/topics/income-poverty/income-inequality/about/metrics/gini-index.html">2</a></sup> Furthermore, parameters like Rented households and households without vehicles add better validation. Interestingly, the aforementioned factors resulted in Wisconsin's waning population growth.<sup><a href = "https://www.forward-analytics.net/research/slowing-down-wisconsins-waning-population-growth/">3</a></sup> Except for Milwaukee, there is sparse growth in urban counties <sup><a href = "https://www.dhs.wisconsin.gov/wish/urban-rural.htm">4</a></sup> like Dane, Brown, and Ozaukee. Therefore, there is no natural population growth in 29 rural counties of Wisconsin. The data is from American Community Survey (ACS) 2016-20. 
         </p>
-
         </div>
 
         <div class = "credits">
