Portfolio button, Pop info update
CSS:
1. Added portfolio button and hover effects for the same button.
HTML:
2. Removed Portfolio hyperlink from credits section.
JS:
3. Edited popup text

--- a/unit-3/index.html
+++ b/unit-3/index.html
@@ -22,6 +22,7 @@
         <div class = "mapTitle"> 
             Demographics & Social Indicators of Wisconsin: A Visual Exploration 
             <button class="reset-button" onClick="window.location.reload(true)">Reset</button>
+            <button class="portfolio-button" onClick="window.open('https://sidrcs.github.io/maps/Maps.html')">Portfolio</button>
         </div>
 
         <div class = "mapDesc">
@@ -44,7 +45,7 @@
 
         <div class = "credits">
             <p> 
-                Data Sources: <a href = "https://foodsecurity.wisc.edu/downloaddata">Wisconsin Food Security Project</a>, <a href = "https://geodata.wisc.edu/catalog/604F7A0B-1715-43B8-835E-4032851481AD"> GeoData@Wisconsin</a> | Credits: <a href = "https://mapshaper.org/">MapShaper</a>, <a href = "https://cartobaldrica.github.io/portfolio/resume.html"> Gareth Baldrica-Franklin</a> | Portfolio - <a href = "https://sidrcs.github.io/maps/index.html">Sid Maps</a>
+                Data Sources: <a href = "https://foodsecurity.wisc.edu/downloaddata">Wisconsin Food Security Project</a>, <a href = "https://geodata.wisc.edu/catalog/604F7A0B-1715-43B8-835E-4032851481AD"> GeoData@Wisconsin</a> | Credits: <a href = "https://mapshaper.org/">MapShaper</a>, <a href = "https://cartobaldrica.github.io/portfolio/resume.html"> Gareth Baldrica-Franklin</a>
             </p>
             © Copyright Chinna Subbaraya Siddharth (Sid) Ramavajjala 2023 
         </div>
